<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_input_time_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_input_time_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onSaveButtonClick"
        android:text="@string/btn_save"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_memo" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:text="@string/tv_start_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_start_time"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_end_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_end_time"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_memo"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_memo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="datetime|text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_time_msg" />

    <EditText
        android:id="@+id/et_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="datetime|text"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_start_time" />

    <EditText
        android:id="@+id/et_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_end_time" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <TextView
        android:id="@+id/tv_saved_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>